--- a/config.yml
+++ b/config.yml
@@ -54,9 +54,9 @@ params:
           enabled: true
           title: ""
           subtitle: "The computational uncertainty lab led by Prof. Thomas McAndrew aims to forecast the trajectory of infectious diseases by combining forecasts from computational models and human judgement. The lab is funded by the NIH, the Centers for Disease Control and Prevention, and the Council for State and Territorial Epidemiologists. The lab includes postdoctoral fellows, PhD candidates, Masters students, and undergraduates who study the intersection of human judgement, statistical forecasting and time series, and outbreak science."
-          imageUrl: "compuncertlab.png"
-          imageWidth: 300
-          imageHeight: 300
+          imageUrl: "compuncertlab.jpg"
+          imageWidth: 200
+          imageHeight: 200
           buttons:
             - name: Papers
               url: papers/
