--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://github.com/computationalUncertaintyLab/complabweb" 
+baseURL: "https://compuncertlab.org" 
 title: Computational Uncertainty Lab
 theme: PaperMod
 
